fix body display bug on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,8 @@
 html, body {
     overflow-y: hidden; 
     overscroll-behavior-y: none;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 body {
